--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="myjsp">
+    <wb-module deploy-name="BOMjsp">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="java-output-path" value="/myjsp/build/classes"/>
-        <property name="context-root" value="myjsp"/>
+        <property name="java-output-path" value="/BOMjsp/build/classes"/>
+        <property name="context-root" value="BOMjsp"/>
     </wb-module>
 </project-modules>
